Finished design & download files functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
-<app-input-section></app-input-section>
-<app-download-link-section></app-download-link-section>
-<app-footer></app-footer>
+<div class="container">
+  <app-header></app-header>
+  <app-input-section></app-input-section>
+  <app-download-link-section></app-download-link-section>
+  <app-footer></app-footer>
+</div>
 <router-outlet></router-outlet>
