--- a/src/app/components/download-link-section/download-link-section.component.html
+++ b/src/app/components/download-link-section/download-link-section.component.html
@@ -1,1 +1,4 @@
-<p>download-link-section works!</p>
+<div id="downloadLinkContainer" style="display: none;">
+  <p id="downloadLink"></p>
+  <button id="copyLinkBtn">Copy Link</button>
+</div>
