--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,10 @@
+<div>
+  <a href="https://vitejs.dev" target="_blank">
+    <img src="/assets/vite.svg" class="logo" alt="Vite logo" />
+  </a>
+  <a href="https://www.typescriptlang.org/" target="_blank">
+    <img src="/assets/typescript.svg" class="logo vanilla" alt="TypeScript logo" />
+  </a>
 
+  <h1>GitHub File Downloader</h1>
+</div>
