Added some more function & services for downloading files'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <app-input-section></app-input-section>
   <app-download-link-section></app-download-link-section>
   <app-footer></app-footer>
+  <app-loader></app-loader>
 </div>
 <router-outlet></router-outlet>
