--- a/src/app/components/input-section/input-section.component.html
+++ b/src/app/components/input-section/input-section.component.html
@@ -1,7 +1,9 @@
-<div class="input-section-wrapper">
+<div class="input-wrapper">
   <h2>Paste GitHub URL to download files:</h2>
-  <input type="text" name="githubUrl" id="githubUrlInput" placeholder="Enter GitHub URL..." [(ngModel)]="githubUrl">
-  <button (click)="generateDownloadLink()">Create Download Link</button>
-  <button (click)="downloadFiles()">Download Files</button>
+  <div class="input-content">
+    <input type="text" name="githubUrl" id="githubUrlInput" placeholder="Enter GitHub URL..." [(ngModel)]="githubUrl">
+    <button (click)="downloadFiles()" id="downloadBtn">Download Files</button>
+    <button (click)="generateDownloadLink()" id="createLinkBtn">Generate Download Link</button>
+  </div>
 </div>
 
