--- a/src/app/components/download-link-section/download-link-section.component.html
+++ b/src/app/components/download-link-section/download-link-section.component.html
@@ -1,4 +1,13 @@
-<div id="downloadLinkContainer" style="display: none;">
-  <p id="downloadLink"></p>
-  <button id="copyLinkBtn">Copy Link</button>
+<div *ngIf="downloadLink$ | async as downloadLink">
+  <ng-container>
+    <div class="code-snippet">
+      <div class="code-header">
+          <button #codeBlock class="copy-button" (click)="copyDownloadLink()">Copy Link</button>
+      </div>
+      <pre>
+        <code class="code-block">{{ downloadLink }}</code>
+      </pre>
+    </div>
+  </ng-container>
+  <!-- <button (click)="copyDownloadLink()">Copy Link</button> -->
 </div>
