--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loaderService.isLoading | async" class="loader-overlay">
+<div *ngIf="isLoading$ | async" class="loader-overlay">
   <div class="loader"></div>
 </div>
 
