--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   <p class="read-the-docs">
-    <a href='https://az1z1ally.github.io/GitGet/' target='_blank'>GitGet</a> by 
+    <a href='https://www.githives.com' target='_blank'>GitHives</a> by 
     <a href='https://github.com/az1z1ally' target='_blank'>Azizi Ally</a>
   </p>
 </footer>
