Finished Githives, 1st Version(Loader & HTTp interceptro included

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,5 +6,5 @@
     <img src="/assets/typescript.svg" class="logo vanilla" alt="TypeScript logo" />
   </a>
 
-  <h1>GitHub File Downloader</h1>
+  <h1 class="main-header">GitHub File Downloader</h1>
 </div>
