--- a/src/app/components/input-section/input-section.component.html
+++ b/src/app/components/input-section/input-section.component.html
@@ -1,5 +1,5 @@
 <div class="input-wrapper">
-  <h2>Paste GitHub URL to download files:</h2>
+  <h2 class="heading-title">Paste GitHub URL to download files:</h2>
   <div class="input-content">
     <input type="text" name="githubUrl" id="githubUrlInput" placeholder="Enter GitHub URL..." [(ngModel)]="githubUrl">
     <button (click)="downloadFiles()" id="downloadBtn">Download Files</button>
