--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,12 +40,12 @@ body {
 }
 
 h1 {
-  font-size: clamp(1.5em, 3vw, 3.2em);
+  font-size: 2em;
   line-height: 1.1;
 }
 
 h2 {
-  font-size: clamp(1em, 3vw, 1.5em);
+  font-size: 1.25em
 }
 
 .container {
