Added Reactive forms to the project

--- a/src/app/components/download-link-section/download-link-section.component.html
+++ b/src/app/components/download-link-section/download-link-section.component.html
@@ -2,7 +2,7 @@
   <ng-container>
     <div class="code-snippet">
       <div class="code-header">
-          <button #codeBlock class="copy-button" (click)="copyDownloadLink(downloadLink)">Copy Link</button>
+          <button #codeBtn class="copy-button" (click)="copyDownloadLink(downloadLink)">Copy Link</button>
       </div>
       <pre>
         <code class="code-block">{{ downloadLink }}</code>
