--- a/src/app/components/input-section/input-section.component.scss
+++ b/src/app/components/input-section/input-section.component.scss
@@ -1,11 +1,13 @@
 .input-wrapper {
 
   .input-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+    form {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    }
   }
 
   .heading-title {
